--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <!--font-awesome link-->
         <script src="https://kit.fontawesome.com/cc2a17cc66.js" crossorigin="anonymous"></script>
+        
+        <!-- Chrome, Firefox OS and Opera --> 
+        <meta name="theme-color" content="#00b300">
     </head>
 
     <body>
