--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="calc-tag">
                 
-                <i class=" far-menu far fa-bars"></i>
+                <!-- <i class=" far-menu far fa-bars"></i> -->
                 <p>Calculator
                     Standard
                 </p>
